# text-to-3D

./: .gitignore  README.txt  gemini_llm.py  llm_interface.py  main.py  openai_llm.py  pyproject.toml  requirements.txt
src/: generate_image.py
src/google_sheets/: README.md  sheets_client.py  sheets_manager.py
test/: README.md  test_sheets.py
